# aiprog-project

./: .env  .gitignore  cnn.py  dataset.py  mask.py  pyproject.toml  readme.md  test_tf_gpu.py
